[workspace]

resolver = "2"

members = [
    "common",
    "dmntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.3.8-dev"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/dmntk/dmntk.git"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.12.1"
base64 = "0.22.1"
chrono = "0.4.43"
chrono-tz = "0.10.4"
convert_case = "0.10.0"
clap = { version = "4.5.56", features = ["cargo"] }
dfp-number-sys = "0.2.14"
difference = "2.0.0"
domrs = "=0.0.5"
markdown = "1.0.0"
once_cell = "1.21.3"
petgraph = "0.8.3"
quote = "1.0.44"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = "2.0.114"
uuid = { version = "1.20.0", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dmntk-common = "0.3.7"
dmntk-evaluator = "0.3.7"
dmntk-examples = "0.3.7"
dmntk-feel = "0.3.7"
dmntk-feel-evaluator = "0.3.7"
dmntk-feel-grammar = "0.3.7"
dmntk-feel-number = "0.3.7"
dmntk-feel-parser = "0.3.7"
dmntk-feel-temporal = "0.3.7"
dmntk-gendoc = "0.3.7"
dmntk-macros = "0.3.7"
dmntk-model = "0.3.7"
dmntk-model-evaluator = "0.3.7"
dmntk-recognizer = "0.3.7"
dmntk-server = "0.3.7"
dmntk-workspace = "0.3.7"
