[workspace]

resolver = "2"

members = [
    "common",
    "dmntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.3.9-dev"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/dmntk/dmntk.git"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.12.1"
base64 = "0.22.1"
chrono = "0.4.43"
chrono-tz = "0.10.4"
convert_case = "0.10.0"
clap = { version = "4.5.56", features = ["cargo"] }
dfp-number-sys = "0.2.14"
difference = "2.0.0"
domrs = "=0.0.5"
markdown = "1.0.0"
once_cell = "1.21.3"
petgraph = "0.8.3"
quote = "1.0.44"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = "2.0.114"
uuid = { version = "1.20.0", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dmntk-examples = { path = "./examples" }
dmntk-macros = { path = "./macros" }
dmntk-common = { path = "./common" }
dmntk-feel-number = { path = "./feel-number" }
dmntk-feel-temporal = { path = "./feel-temporal" }
dmntk-feel-grammar = { path = "./feel-grammar" }
dmntk-feel = { path = "./feel" }
dmntk-feel-parser = { path = "./feel-parser" }
dmntk-feel-evaluator = { path = "./feel-evaluator" }
dmntk-model = { path = "./model" }
dmntk-recognizer = { path = "./recognizer" }
dmntk-model-evaluator = { path = "./model-evaluator" }
dmntk-evaluator = { path = "./evaluator" }
dmntk-gendoc = { path = "./gendoc" }
dmntk-workspace = { path = "./workspace" }
dmntk-server = { path = "./server" }
dmntk = { path = "./dmntk" }
