[package]
name = "dmntk-common"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Common definitions"
documentation = "https://docs.rs/dmntk-common"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }
dmntk-macros = { workspace = true }
