[package]
name = "dmntk-evaluator"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | FEEL and DMN model evaluator"
documentation = "https://docs.rs/dmntk-evaluator"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dmntk-common = { workspace = true }
dmntk-feel = { workspace = true }
dmntk-feel-evaluator = { workspace = true }
dmntk-feel-parser = { workspace = true }
dmntk-model-evaluator = { workspace = true }
