[package]
name = "dmntk-examples"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Examples"
documentation = "https://docs.rs/dmntk-examples"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
walkdir = { workspace = true }
