[package]
name = "dmntk-feel-grammar"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | FEEL grammar"
documentation = "https://docs.rs/dmntk-feel-grammar"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
convert_case = { workspace = true }
regex = { workspace = true }
