[package]
name = "dmntk-feel-number"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | FEEL number"
documentation = "https://docs.rs/dmntk-feel-number"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]

[dependencies]
dfp-number-sys = { workspace = true }
dmntk-common = { workspace = true }
dmntk-macros = { workspace = true }
