[package]
name = "dmntk-gendoc"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Documentation generator"
documentation = "https://docs.rs/dmntk-model"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
domrs = { workspace = true }
markdown = { workspace = true }
dmntk-common = { workspace = true }
dmntk-examples = { workspace = true }
dmntk-feel = { workspace = true }
dmntk-model = { workspace = true }

[dev-dependencies]
dmntk-recognizer = { workspace = true }
