[package]
name = "dmntk-macros"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Procedural and derive macros"
documentation = "https://docs.rs/dmntk-macros"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
