[package]
name = "dmntk-model"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | DMN model and parser"
documentation = "https://docs.rs/dmntk-model"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
petgraph = { workspace = true }
roxmltree = { workspace = true }
dmntk-common = { workspace = true }
dmntk-examples = { workspace = true }
dmntk-feel = { workspace = true }
dmntk-feel-parser = { workspace = true }
dmntk-macros = { workspace = true }
