[package]
name = "dmntk-recognizer"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Decision Table Recognizer"
documentation = "https://docs.rs/dmntk-recognizer"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dmntk-common = { workspace = true }
dmntk-macros = { workspace = true }
dmntk-model = { workspace = true }

[dev-dependencies]
dmntk-examples = { workspace = true }
