[package]
name = "dmntk-workspace"
version = { workspace = true }
authors = { workspace = true }
description = "dmntk | Workspace"
documentation = "https://docs.rs/dmntk-workspace"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
urlencoding = { workspace = true }
walkdir = { workspace = true }
dmntk-common = { workspace = true }
dmntk-feel = { workspace = true }
dmntk-feel-evaluator = { workspace = true }
dmntk-macros = { workspace = true }
dmntk-model = { workspace = true }
dmntk-model-evaluator = { workspace = true }

[dev-dependencies]
dmntk-examples = { workspace = true }
